--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -24,4 +24,8 @@ jobs:
       - name: Build app 
         run: dotnet build -c Release --no-restore
 
+      - name: Run Automated  Tests
+        run: dotnet test -c Release --no-build
+
+
        
