--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -27,5 +27,13 @@ jobs:
       - name: Run Automated  Tests
         run: dotnet test -c Release --no-build
 
+      - name: Publish app 
+        run: dotnet publish -c Release -o ./out 
 
+      - name: Deploy to Azure Webb Apss
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ffrank-first-webapp
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_SECRET }}
+          package: ./out
        
